@@ -4,8 +4,9 @@ Changes between 0.2.3 and 0.3.0  [XX xxx XXXX]
      mifare_desfire_authenticate_iso() and mifare_desfire_authenticate_aes().
   *) Add support for 3K3DES and AES cryptographic operations.
   *) New functions mifare_desfire_free_mem(),
-     mifare_desfire_set_configuration(), mifare_desfire_get_card_uid(), for
-     Mifare DESFire EV1 targets manipulation.
+     mifare_desfire_set_configuration(), mifare_desfire_set_default_key(),
+     mifare_desfire_get_card_uid(), for Mifare DESFire EV1 targets
+     manipulation.
   *) Deprecate authentication information when deleting the currently selected
      application
 
